# github_actions-demo

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ruff.yml
