[project]
name = "github_actions-python-lint"
version = "0.1.0"
description = "GitHub ActionsでPython Lintを実行するためのワークフローテンプレート"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    
]

[dependency-groups]
dev = [
    "pytest>=8.4.0"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.13.0",
]
